2009-07-29 John Wu <John.Wu at ACM.org>
	* src/parth*.cpp: add ibis::CATEGORY to cases for ibis::UINT.
	This allows categorical values to be used in histogram functions.
	Previously, only some of the cases for UINT has CATEGORY as well.
	The inconsistency was revealed after Andrew Olson raised the
	question about possibility of using categorical values in
	histograms.
	* win/MinGW.mak: change column type of t1/c from short to ushort
	to match the changes in tests/Makefile.am

2009-07-29 John Wu <John.Wu at ACM.org>
	* src/irelic.cpp: change estimateCost to attempt to use bits
	directly if offsets is not available
	* src/countQuery.cpp: update doScan and doEvaluate to correct
	error involving query conditions that return no hit (the same
	problems in query.cpp were fixed on 7/16), make doScan and
	doEvaluate consistently return the number of hits

2009-07-28 John Wu <John.Wu at ACM.org>
	* src/util.cpp: util::isortRIDs to util::sortRIDsi, fix leftover
	problems with function names in utilidor.cpp
	* src/index.cpp:7140 remove the if-block that preventing basis
	size 2 being used, add case to handle base size 2 for all
	components

2009-07-16 John Wu <John.Wu at ACM.org>
	* src/query.cpp: doEvaluate and doScan handled the LOGICAL_AND
	operator incorrectly, when no hit is found, it neglected to set
	the result bitvector, which causes other expressions to produce
	incorrect answers (apparently, this is the root cuase of the
	problem reported by Jochen Schlosser)
	* tests/scripts/query-count.list: add empty conditions to exercise
	the changes in query.cpp
	* src/qExpr.h, src/qExpr.cpp: change print function to only print
	one node, rename old print function (that recursively prints the
	whole express tree) to printFull, removed qExpr::printRange
	* src/category.cpp: call prepareMembers in category::selectUInts
	(without it, the program ibis occasionally crashes)
	* src/array_t.cpp: check for k being 0 in topk and bottomk,