@@ -152,7 +152,7 @@ long ibis::part::get3DDistribution(const char *constraints, const char *cname1,
 	    << " AND " << cname3 << " between " << std::setprecision(18)
 	    << begin3 << " and " << std::setprecision(18) << end3;
 	qq.setWhereClause(oss.str().c_str());
-	ierr = qq.evaluate();
+	ierr = qq.evaluate(false);
 	if (ierr < 0)
 	    return ierr;
 	ierr = qq.getNumHits();
@@ -2577,7 +2577,7 @@ long ibis::part::get3DDistribution(const char *constraints, const char *cname1,
 	    << " AND " << cname3 << " between " << std::setprecision(18)
 	    << begin3 << " and " << std::setprecision(18) << end3;
 	qq.setWhereClause(oss.str().c_str());
-	ierr = qq.evaluate();
+	ierr = qq.evaluate(false);
 	if (ierr < 0)
 	    return ierr;
 	ierr = qq.getNumHits();
@@ -5392,7 +5392,7 @@ long ibis::part::get3DDistribution(const char *constraints,
 	if (ierr < 0)
 	    return -3L;
 
-	ierr = qq.evaluate();
+	ierr = qq.evaluate(false);
 	if (ierr < 0)
 	    return -4L;
 	if (qq.getNumHits() == 0) {
@@ -6032,7 +6032,7 @@ long ibis::part::get3DBins(const char *constraints, const char *cname1,
 	ierr = qq.setWhereClause(constraints);
 	if (ierr < 0)
 	    return -4L;
-	ierr = qq.evaluate();
+	ierr = qq.evaluate(false);
 	if (ierr < 0)
 	    return -5L;
 
