@@ -1,3 +1,11 @@
+2009-07-30 John Wu <John.Wu at ACM.org>
+	* src/qExpr.cpp: change the print statements in qExpr::simplify
+	and qExpr::reorder to use the same verboseness level
+	* src/query.cpp, src/countQuery.cpp: neglected to set the proper
+	return values when comparing strings
+	* src/parth*.cpp: explicitly pass the argument false to function
+	query::evaluate
+
 2009-07-29 John Wu <John.Wu at ACM.org>
 	* src/parth*.cpp: add ibis::CATEGORY to cases for ibis::UINT.
 	This allows categorical values to be used in histogram functions.
